--- a/src/components/body/TableContent/TableContent.css
+++ b/src/components/body/TableContent/TableContent.css
@@ -1,6 +1,6 @@
 .ParentDiv{
 
-    height: calc(94vh - 150px);
+    height: 78vh;
     margin-right: 102px;
     margin-left: 50px;
     background-color: #ffffff;
