--- a/src/components/body/TableContent/EmployeeBar/employeeBar.css
+++ b/src/components/body/TableContent/EmployeeBar/employeeBar.css
@@ -1,51 +1,73 @@
-.parentdiv-employeebar{
 
-    width: 24%;
-    display: flex;
-    height: 67vh ;    
-    background-color: red;
-    border: 1px solid var(--font-greycolor);
-    border-radius: 10px;
-}
-
-.employee1{
+.employee {
 
     display: flex;
-    padding: 10px 10px 10px 10px;
+    padding: 10px;
     gap: 12px;
-    height: 52px;width: 100%;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
+    height: 52px;
     border: 1px solid var(--font-greycolor);
 
-    img{
+    img {
         height: 51px;
         width: 52px;
     }
-    
+
 }
 
-.parentdiv-employeeDetails{
+.parentdiv-employeeDetails {
 
     width: 76%;
     display: flex;
     height: 67vh;
-    background-color: blue;
+    background-color: #ffffff;
     border-radius: 10px;
-     
+    border: 2px solid var(--font-greycolor);
 }
-.parentForBoth{
+
+.parentForBoth {
     display: flex;
     margin-left: 20px;
     margin-right: 20px;
     gap: 10px;
 }
 
-.employeedetails1{
-    padding-top: 5px; 
+.employeedetails {
+    padding-top: 5px;
     line-height: 1.4;
 }
-.para1{
+
+.para1 {
     font-size: 20px;
     font-weight: 500;
+}
+
+.parentdiv-employeebar {
+    width: 24%;
+    display: flex;
+    height: 67vh;
+    background-color: #ffffff;
+    border: 1px solid var(--font-greycolor);
+    border-radius: 10px;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.parentdiv-employeebar::-webkit-scrollbar {
+    width: 6px;
+    display: none;
+}
+
+.parentdiv-employeebar:hover::-webkit-scrollbar {
+    display: block;
+}
+
+.parentdiv-employeebar:hover {
+    scrollbar-width: thin;
+}
+
+.employee:first-child{
+
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
