--- a/src/components/Router/Cart.css
+++ b/src/components/Router/Cart.css
@@ -7,13 +7,69 @@
 }
 
 .card-div {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 400px;
-  height: 580px;
+  /* display: flex; */
+  /* justify-content: center; */
+  /* align-items: center; */
+  width: 700px;
+  /* height: 580px; */
   background-color: #fff;
   border-radius: 16px;
   box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
   border: 2px solid var(--primary);
+}
+
+.employee11 {
+
+  display: flex;
+  padding: 10px;
+  gap: 12px;
+  height: 52px;
+  border: 1px solid var(--font-greycolor);
+  justify-content: space-between;
+  align-items: center;
+
+  /* img {
+        height: 51px;
+        width: 52px;
+    } */
+
+}
+
+
+
+.parentdiv-employeeDetails11 {
+
+  /* width: 76%; */
+  display: flex;
+  height: 67vh;
+  background-color: #ffffff;
+  border-radius: 10px;
+  border: 2px solid var(--font-greycolor);
+}
+
+
+.employeedetails11 {
+  padding-top: 5px;
+  line-height: 1.4;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  img {
+    height: 51px;
+    width: 52px;
+  }
+}
+
+.parentdiv-employeebar11 {
+  width: 100%;
+  display: flex;
+  height: 67vh;
+  background-color: #ffffff;
+  border: 1px solid var(--font-greycolor);
+  border-radius: 20px;
+  flex-direction: column;
+  overflow-y: auto;
+  overflow-x: hidden;
+
 }
