--- a/src/components/body/TableContent/EmployeeBar/employeeBar.css
+++ b/src/components/body/TableContent/EmployeeBar/employeeBar.css
@@ -1,4 +1,3 @@
-
 .employee {
 
     display: flex;
@@ -6,13 +5,17 @@
     gap: 12px;
     height: 52px;
     border: 1px solid var(--font-greycolor);
+    justify-content: space-between;
+    align-items: center;
 
-    img {
+    /* img {
         height: 51px;
         width: 52px;
-    }
+    } */
 
 }
+
+
 
 .parentdiv-employeeDetails {
 
@@ -34,6 +37,14 @@
 .employeedetails {
     padding-top: 5px;
     line-height: 1.4;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    img {
+        height: 51px;
+        width: 52px;
+    }
 }
 
 .para1 {
@@ -51,6 +62,7 @@
     flex-direction: column;
     overflow-y: auto;
     overflow-x: hidden;
+
 }
 
 .parentdiv-employeebar::-webkit-scrollbar {
@@ -66,7 +78,7 @@
     scrollbar-width: thin;
 }
 
-.employee:first-child{
+.employee:first-child {
 
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
